--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,4 +1,19 @@
 {
-	"compilerOptions": {},
-	"include": ["*.ts"]
+	"compilerOptions": {
+		"target": "ES2021",
+		"module": "ESNext",
+		"skipLibCheck": true,
+
+		/* Bundler mode */
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"noEmit": true,
+
+		/* Linting */
+		"strict": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true
+	}
 }
