--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@vercel/analytics": "^1.5.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-router-dom": "^6.30.1",
 		"tailwindcss": "^4.1.11"
 	},
 	"devDependencies": {
