--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@supabase/supabase-js": "^2.52.1",
 		"@tailwindcss/vite": "^4.1.11",
 		"@vercel/analytics": "^1.5.0",
+		"dotenv": "^17.2.3",
+		"framer-motion": "^12.23.24",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-router-dom": "^6.30.1",
