--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@google/genai": "^1.24.0",
+		"@google/generative-ai": "^0.24.1",
 		"@supabase/supabase-js": "^2.52.1",
 		"@tailwindcss/vite": "^4.1.11",
 		"@vercel/analytics": "^1.5.0",
